sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__not-indexed-update.snap
---
source: indexes.sqltest
expression: UPDATE products NOT INDEXED SET price = 0 WHERE sku = 'CLEARANCE';
info:
  statement_type: UPDATE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
