sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__or-indexed-and-non-indexed.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, source
      FROM events
      WHERE event_type = 'ERROR' OR source = 'auth-service';
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN events
