sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__or-with-and-combinations.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity, source
      FROM events
      WHERE (event_type = 'ERROR' AND severity > 5)
         OR (event_type = 'WARNING' AND severity > 7);
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR events (idx_events_type, idx_events_type)
