sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__range-scan-with-equality.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      WHERE category = 'Electronics' AND price BETWEEN 100 AND 500;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_category (category=?)
