sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__rowid-range-no-alias.snap
---
source: indexes.sqltest
expression: SELECT rowid, name, value FROM items WHERE rowid > 10 AND rowid < 20;
info:
  statement_type: SELECT
  tables:
  - items
  setup_blocks:
  - no_rowid_alias
  database: ':memory:'
---
QUERY PLAN
`--SEARCH items USING INTEGER PRIMARY KEY (rowid=?)

BYTECODE
addr  opcode          p1  p2  p3  p4        p5  comment
   0  Init             0  13   0             0  Start at 13
   1  OpenRead         0   2   0  k(3,B,B)   0  table=items, root=2, iDb=0
   2  Integer         10   4   0             0  r[4]=10
   3  SeekGT           0  12   4             0  key=[4..4]
   4  Integer         20   4   0             0  r[4]=20
   5    RowId          0   5   0             0  r[5]=items.rowid
   6    Ge             5   4  12             0  if r[5]>=r[4] goto 12
   7    RowId          0   1   0             0  r[1]=items.rowid
   8    ColumnRange    0   0   2  2          0  r[2..3]=items.columns[0..1]
   9    RealAffinity   3   0   0             0
  10    ResultRow      1   3   0             0  output=r[1..3]
  11  Next             0   5   0             0
  12  Halt             0   0   0             0
  13  Transaction      0   1   1             0  iDb=0 tx_mode=Read
  14  Goto             0   1   0             0
